--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -9,50 +9,69 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="">Header Logo</a>
-        </nav>
-        <nav>
-            <a href="">header link one</a>
-            <a href="">header link two</a>
-            <a href="">header link three</a>
-        </nav>
+        <div class="content-wrapper navbar">
+            <a href="" class="logo">Header Logo</a>
+            <nav>
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </nav>
+        </div>
     </header>
     <header>
-        <section>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-        </section>
-        <figure>
-            <img src="" alt="">
-            <figcaption>This is a placeholder for an image</figcaption>
-        </figure>
-    </header>
-    <section>
-        <h2>Some random information</h2>
-        <div>
+        <div class="content-wrapper" id="index-hero">
+            <section>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </section>
             <figure>
-                <img src="" alt="">
-                <figcaption>this is some subtext under an illustration or image</figcaption>
+                <img src="img/op-placeholder.png" alt="The Odin Project">
             </figure>
         </div>
-    </section>
-    <section>
-        <blockquote>
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.
-        </blockquote>
-        <span>Thor, God of Thunder</span>
-    </section>
-    <section>
-        <div>
-            <strong>Call to action! It's time!</strong>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <button>Sign up</button>
-    </section>
+    </header>
+    <main>
+        <section class="content-wrapper" id="random-info">
+            <h2>Some random information</h2>
+            <div>
+                <figure>
+                    <img src="img/op-placeholder.png" alt="The Odin Project">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/op-placeholder.png" alt="The Odin Project">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/op-placeholder.png" alt="The Odin Project">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/op-placeholder.png" alt="The Odin Project">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+            </div>
+        </section>
+        <section class="quote-container">
+            <div class="content-wrapper">
+                <blockquote>
+                    <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</em>
+                </blockquote>
+                <strong class="author">-Thor, God of Thunder</strong>
+            </div>
+        </section>
+        <section class="content-wrapper call-to-action">
+            <div>
+                <strong>Call to action! It's time!</strong>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </section>
+    </main>
     <footer>
-        <span>Copyright The Odin Project 2021</span>
+        <div class="content-wrapper copyright">
+            <span>Copyright The Odin Project 2021</span>
+        </div>
     </footer>
 </body>
 </html>
