--- a/forms/index.html
+++ b/forms/index.html
@@ -25,28 +25,28 @@
                 <h1>Let's do this!</h1>
                 <form action="" id="sign-up-form">
                     <div class="form-element">
-                        <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name">
+                        <label for="first-name">First name</label>
+                        <input type="text" id="first-name" required>
                     </div>
                     <div class="form-element">
-                        <label for="last-name">LAST NAME</label>
+                        <label for="last-name">Last name</label>
                         <input type="text" id="last-name">
                     </div>
                     <div class="form-element">
-                        <label for="email">EMAIL</label>
-                        <input type="email" id="email">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" required>
                     </div>
                     <div class="form-element">
-                        <label for="phone-number">PHONE NUMBER</label>
+                        <label for="phone-number">Phone number</label>
                         <input type="tel" id="phone-number">
                     </div>
                     <div class="form-element">
-                        <label for="password">PASSWORD</label>
-                        <input type="password" id="password">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" required>
                     </div>
                     <div class="form-element">
-                        <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm-password">
+                        <label for="confirm-password">Confirm password</label>
+                        <input type="password" id="confirm-password" required>
                     </div>
                 </form>
             </section>
